feat: Add English README and correct environment variables
- Add README_EN.md with English documentation
- Correct environment variables to only include actually used APIs
- Update Chinese README with correct API information
- Add language switching between Chinese and English READMEs
- Remove unused API configurations (Agora, Supabase, ElevenLabs, Pinecone)
- Keep only MiniMax (chat) and Stepfun (TEN Framework) APIs

--- a/medjourney-backend/env.example
+++ b/medjourney-backend/env.example
@@ -1,17 +1,7 @@
-# Database Configuration
-DATABASE_URL=your_supabase_database_url_here
-SUPABASE_URL=your_supabase_url_here
-SUPABASE_ANON_KEY=your_supabase_anon_key_here
-
-# AI Services Configuration
+# AI Services Configuration (Actually Used)
 MINIMAX_API_KEY=your_minimax_api_key_here
 MINIMAX_GROUP_ID=your_group_id_here
 STEPFUN_API_KEY=your_stepfun_api_key_here
-ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
-
-# Pinecone Configuration
-PINECONE_API_KEY=your_pinecone_api_key_here
-PINECONE_ENVIRONMENT=your_pinecone_environment_here
 
 # JWT Configuration
 JWT_SECRET=your_jwt_secret_here
