--- a/medjourney-frontend/env.example
+++ b/medjourney-frontend/env.example
@@ -1,27 +1,13 @@
-# MiniMax API Configuration
+# MiniMax API Configuration (Chat functionality)
 VITE_MINIMAX_API_KEY=your_minimax_api_key_here
 VITE_MINIMAX_GROUP_ID=your_group_id_here
 
-# Agora Configuration
-VITE_AGORA_APP_ID=your_agora_app_id_here
-VITE_AGORA_APP_TOKEN=your_agora_token_here
-
-# API Base URL
-VITE_API_BASE_URL=http://localhost:3000/api
-
-# Stepfun AI Configuration
+# Stepfun AI Configuration (TEN Framework real-time conversation)
 VITE_STEPFUN_API_KEY=your_stepfun_api_key_here
 
-# ElevenLabs Configuration
-VITE_ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
+# TEN Framework Configuration
+VITE_TEN_WS_URL=ws://localhost:8080
+VITE_TEN_API_URL=http://localhost:8080
 
-# Supabase Configuration
-VITE_SUPABASE_URL=your_supabase_url_here
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
-
-# Pinecone Configuration
-VITE_PINECONE_API_KEY=your_pinecone_api_key_here
-VITE_PINECONE_ENVIRONMENT=your_pinecone_environment_here
-
-# JWT Configuration
-VITE_JWT_SECRET=your_jwt_secret_here 
+# API Base URL
+VITE_API_BASE_URL=http://localhost:3000/api 
